--- a/01-getting-started-with-data/index.html
+++ b/01-getting-started-with-data/index.html
@@ -432,7 +432,7 @@ summary {
 </ul>
 </div>
 <div id="sampling-strategies-and-experimental-design" class="section level3">
-<h3>3 - <a href="https://openintro.shinyapps.io/ims-01-getting-started-with-data-03/">Sampling strategies and Experimental design</a></h3>
+<h3>3 - <a href="https://openintro.shinyapps.io/ims-01-getting-started-with-data-03/">Sampling strategies and experimental design</a></h3>
 <ul>
 <li><p>Define simple random sample, stratified sample, cluster sample, multistage sample</p></li>
 <li><p>Use R to obtain SRS and stratified sample</p>
