--- a/01-getting-started-with-data/index.html
+++ b/01-getting-started-with-data/index.html
@@ -226,16 +226,16 @@ pre code {
 <li><p>Define simple random sample, stratified sample, cluster sample, multistage sample</p></li>
 <li><p>Use R to obtain SRS and stratified sample</p>
 <ul>
-<li><code>sample_n()</code></li>
-<li><code>group_by()</code> %&gt;% <code>sample_n()</code></li>
+<li><code>slice_sample()</code></li>
+<li><code>group_by()</code> %&gt;% <code>slice_sample()</code></li>
 </ul></li>
 <li><p>Discuss benefits and drawbacks of choosing one sampling scheme over another</p></li>
 <li><p>Identify the principles of experimental design</p></li>
 <li><p>Discuss the purpose of each principle</p></li>
 <li><p>Use R to do random assignment and random assignment after blocking</p>
 <ul>
-<li><code>sample_n()</code></li>
-<li><code>group_by()</code> %&gt;% <code>sample_n()</code></li>
+<li><code>slice_sample()</code></li>
+<li><code>group_by()</code> %&gt;% <code>slice_sample()</code></li>
 </ul></li>
 </ul>
 </div>
