Update links from indices

--- a/01-data/index.html
+++ b/01-data/index.html
@@ -194,7 +194,7 @@ pre code {
 <div id="lessons" class="section level2">
 <h2>Lessons</h2>
 <div id="language-of-data" class="section level3">
-<h3>1 - <a href="https://openintro.shinyapps.io/ims-01-getting-started-with-data-01/">Language of data</a></h3>
+<h3>1 - <a href="https://openintro.shinyapps.io/ims-01-data-01/">Language of data</a></h3>
 <ul>
 <li>Load data from the textbook companion package</li>
 <li>Introduce data frames and tidy data</li>
@@ -209,7 +209,7 @@ pre code {
 </ul>
 </div>
 <div id="types-of-studies" class="section level3">
-<h3>2 - <a href="https://openintro.shinyapps.io/ims-01-getting-started-with-data-02/">Types of studies</a></h3>
+<h3>2 - <a href="https://openintro.shinyapps.io/ims-01-data-02/">Types of studies</a></h3>
 <ul>
 <li>Define observational studies and experiments</li>
 <li>Discuss scope of inference 2x2 grid with random assignment and sampling</li>
@@ -221,7 +221,7 @@ pre code {
 </ul>
 </div>
 <div id="sampling-strategies-and-experimental-design" class="section level3">
-<h3>3 - <a href="https://openintro.shinyapps.io/ims-01-getting-started-with-data-03/">Sampling strategies and experimental design</a></h3>
+<h3>3 - <a href="https://openintro.shinyapps.io/ims-01-data-03/">Sampling strategies and experimental design</a></h3>
 <ul>
 <li><p>Define simple random sample, stratified sample, cluster sample, multistage sample</p></li>
 <li><p>Use R to obtain SRS and stratified sample</p>
@@ -240,7 +240,7 @@ pre code {
 </ul>
 </div>
 <div id="case-study" class="section level3">
-<h3>4 - <a href="https://openintro.shinyapps.io/ims-01-getting-started-with-data-04/">Case study</a></h3>
+<h3>4 - <a href="https://openintro.shinyapps.io/ims-01-data-04/">Case study</a></h3>
 <ul>
 <li>Apply terminology, principles, and R code learned in this tutorial to a case study</li>
 </ul>
