--- a/02-explore/index.html
+++ b/02-explore/index.html
@@ -186,7 +186,7 @@ pre code {
 <div id="lessons" class="section level2">
 <h2>Lessons</h2>
 <div id="visualizing-categorical-data" class="section level3">
-<h3>1 - <a href="https://openintro.shinyapps.io/ims-02-summarizing-and-visualizing-data-01/">Visualizing categorical data</a></h3>
+<h3>1 - <a href="https://openintro.shinyapps.io/ims-02-explore-01/">Visualizing categorical data</a></h3>
 <p>Creating graphical and numerical summaries of two categorical variables, primarily using two R packages: ggplot2 and dplyr.</p>
 <ul>
 <li>Graphical representation two categorical variables
@@ -214,7 +214,7 @@ pre code {
 </ul>
 </div>
 <div id="visualizing-numerical-data" class="section level3">
-<h3>2 - <a href="https://openintro.shinyapps.io/ims-02-summarizing-and-visualizing-data-02/">Visualizing numerical data</a></h3>
+<h3>2 - <a href="https://openintro.shinyapps.io/ims-02-explore-02/">Visualizing numerical data</a></h3>
 <p>Learn useful statistics for describing distributions of data.</p>
 <ul>
 <li>Graphical representation of one categorical and one numerical variable</li>
@@ -232,7 +232,7 @@ pre code {
 </ul>
 </div>
 <div id="summarizing-with-statistics" class="section level3">
-<h3>3 - <a href="https://openintro.shinyapps.io/ims-02-summarizing-and-visualizing-data-03/">Summarizing with statistics</a></h3>
+<h3>3 - <a href="https://openintro.shinyapps.io/ims-02-explore-03/">Summarizing with statistics</a></h3>
 <p>Statistics for describing distributions of data.</p>
 <ul>
 <li>Center: mean, median, mode</li>
@@ -243,7 +243,7 @@ pre code {
 </ul>
 </div>
 <div id="case-study" class="section level3">
-<h3>4 - <a href="https://openintro.shinyapps.io/ims-02-summarizing-and-visualizing-data-04/">Case study</a></h3>
+<h3>4 - <a href="https://openintro.shinyapps.io/ims-02-explore-04/">Case study</a></h3>
 <p>Apply what you’ve learned to explore and summarize a real world dataset in this case study of email spam.</p>
 </div>
 </div>
