--- a/03-model/index.html
+++ b/03-model/index.html
@@ -191,7 +191,7 @@ pre code {
 <div id="lessons" class="section level2">
 <h2>Lessons</h2>
 <div id="visualizing-two-variables" class="section level3">
-<h3>1 - <a href="https://openintro.shinyapps.io/ims-03-introduction-to-linear-models-01/">Visualizing two variables</a></h3>
+<h3>1 - <a href="https://openintro.shinyapps.io/ims-03-model-01/">Visualizing two variables</a></h3>
 <ul>
 <li>Explore <a href="https://en.wikipedia.org/wiki/Bivariate_analysis">bivariate relationships</a> graphically</li>
 <li>Characterize bivariate relationships</li>
@@ -201,7 +201,7 @@ pre code {
 </ul>
 </div>
 <div id="correlation" class="section level3">
-<h3>2 - <a href="https://openintro.shinyapps.io/ims-03-introduction-to-linear-models-02/">Correlation</a></h3>
+<h3>2 - <a href="https://openintro.shinyapps.io/ims-03-model-02/">Correlation</a></h3>
 <ul>
 <li>Quantify the strength of a linear relationship</li>
 <li>Compute and interpret Pearson Product-Moment <a href="https://en.wikipedia.org/wiki/Correlation_and_dependence">correlation</a></li>
@@ -209,7 +209,7 @@ pre code {
 </ul>
 </div>
 <div id="simple-linear-regression" class="section level3">
-<h3>3 - <a href="https://openintro.shinyapps.io/ims-03-introduction-to-linear-models-03/">Simple linear regression</a></h3>
+<h3>3 - <a href="https://openintro.shinyapps.io/ims-03-model-03/">Simple linear regression</a></h3>
 <ul>
 <li>Visualize a simple linear model as “best fit” line</li>
 <li>Conceptualize simple <a href="https://en.wikipedia.org/wiki/Linear_regression">linear regression</a></li>
@@ -218,7 +218,7 @@ pre code {
 </ul>
 </div>
 <div id="interpreting-regression-models" class="section level3">
-<h3>4 - <a href="https://openintro.shinyapps.io/ims-03-introduction-to-linear-models-04/">Interpreting regression models</a></h3>
+<h3>4 - <a href="https://openintro.shinyapps.io/ims-03-model-04/">Interpreting regression models</a></h3>
 <ul>
 <li>Interpret the meaning of coefficients in a regression model</li>
 <li>Understand the impact of units and scales</li>
@@ -228,7 +228,7 @@ pre code {
 </ul>
 </div>
 <div id="model-fit" class="section level3">
-<h3>5 - <a href="https://openintro.shinyapps.io/ims-03-introduction-to-linear-models-05/">Model fit</a></h3>
+<h3>5 - <a href="https://openintro.shinyapps.io/ims-03-model-05/">Model fit</a></h3>
 <ul>
 <li>Assess the quality of fit of a regression model</li>
 <li>Interpret <a href="https://en.wikipedia.org/wiki/Coefficient_of_determination"><span class="math inline">\(R^2\)</span></a></li>
@@ -237,14 +237,14 @@ pre code {
 </ul>
 </div>
 <div id="parallel-slopes" class="section level3">
-<h3>6 - <a href="https://openintro.shinyapps.io/ims-04-multivariable-and-logistic-models-01/">Parallel slopes</a></h3>
+<h3>6 - <a href="https://openintro.shinyapps.io/ims-03-model-06/">Parallel slopes</a></h3>
 <ul>
 <li>Visualize, fit, and interpret a parallel slopes model, which has one numeric and one categorical explanatory variable</li>
 <li>Describe a model in three different ways: mathematically, graphically, and through R syntax</li>
 </ul>
 </div>
 <div id="evaluating-and-extending-parallel-slopes-model" class="section level3">
-<h3>7 - <a href="https://openintro.shinyapps.io/ims-04-multivariable-and-logistic-models-02/">Evaluating and extending parallel slopes model</a></h3>
+<h3>7 - <a href="https://openintro.shinyapps.io/ims-03-model-07/">Evaluating and extending parallel slopes model</a></h3>
 <ul>
 <li>Assess and interpret model fit</li>
 <li>Compute residuals and predictions</li>
@@ -253,7 +253,7 @@ pre code {
 </ul>
 </div>
 <div id="multiple-regression" class="section level3">
-<h3>8 - <a href="https://openintro.shinyapps.io/ims-04-multivariable-and-logistic-models-03/">Multiple regression</a></h3>
+<h3>8 - <a href="https://openintro.shinyapps.io/ims-03-model-08/">Multiple regression</a></h3>
 <ul>
 <li>Visualize, fit, and interpret a multiple regression model with two numeric explanatory variables</li>
 <li>Visualize, fit, and interpret a parallel planes model with two numeric explanatory variables and a categorical variable</li>
@@ -262,7 +262,7 @@ pre code {
 </ul>
 </div>
 <div id="logistic-regression" class="section level3">
-<h3>9 - <a href="https://openintro.shinyapps.io/ims-04-multivariable-and-logistic-models-04/">Logistic regression</a></h3>
+<h3>9 - <a href="https://openintro.shinyapps.io/ims-03-model-09/">Logistic regression</a></h3>
 <ul>
 <li>Visualize, fit, and interpret logistic regression models</li>
 <li>Interpret coefficients on three different scales</li>
@@ -270,7 +270,7 @@ pre code {
 </ul>
 </div>
 <div id="case-study-italian-restaurants-in-nyc" class="section level3">
-<h3>10 - <a href="https://openintro.shinyapps.io/ims-04-multivariable-and-logistic-models-05/">Case study: Italian restaurants in NYC</a></h3>
+<h3>10 - <a href="https://openintro.shinyapps.io/ims-03-model-10/">Case study: Italian restaurants in NYC</a></h3>
 <ul>
 <li>Explore the relationship between price and the quality of food, service, and decor for Italian restaurants in <a href="https://en.wikipedia.org/wiki/New_York_City">New York City</a></li>
 </ul>
