--- a/05-infer/index.html
+++ b/05-infer/index.html
@@ -195,35 +195,35 @@ We will encounter several new point estimates and a couple new distributions. In
 <div id="lessons" class="section level2">
 <h2>Lessons</h2>
 <div id="inference-for-a-single-proportion" class="section level3">
-<h3>1 - <a href="https://openintro.shinyapps.io/ims-06-inference-for-categorical-responses-01/">Inference for a single proportion</a></h3>
+<h3>1 - <a href="https://openintro.shinyapps.io/ims-05-infer-01/">Inference for a single proportion</a></h3>
 <p>In this lesson you will learn how to form a confidence interval on a single proportion using bootstrapping and an approximation-based method. You’ll explore how the sample size and the true proportion effect the width of the interval.</p>
 </div>
 <div id="hypothesis-tests-to-compare-proportions" class="section level3">
-<h3>2 - <a href="https://openintro.shinyapps.io/ims-06-inference-for-categorical-responses-02/">Hypothesis tests to compare proportions</a></h3>
+<h3>2 - <a href="https://openintro.shinyapps.io/ims-05-infer-02/">Hypothesis tests to compare proportions</a></h3>
 <p>This lesson dives deeper into inference for a single parameter by performing hypothesis tests. Then, you’ll extend this technique to the difference between two proportions. Finally, this lesson wraps up with an exploration of what happens when you know the null hypothesis is true and the types of statistical errors that are baked in to this approach.</p>
 </div>
 <div id="chi-squared-test-of-independence" class="section level3">
-<h3>3 - <a href="https://openintro.shinyapps.io/ims-06-inference-for-categorical-responses-03/">Chi-squared test of independence</a></h3>
+<h3>3 - <a href="https://openintro.shinyapps.io/ims-05-infer-03/">Chi-squared test of independence</a></h3>
 <p>This part of the tutorial will teach you how to use both bootstrapping and approximation methods to test for the independence of two categorical variables. This commonly-used method is called the chi-squared Test of Independence.</p>
 </div>
 <div id="chi-squared-goodness-of-fit-test" class="section level3">
-<h3>4 - <a href="https://openintro.shinyapps.io/ims-06-inference-for-categorical-responses-04/">Chi-squared goodness of fit test</a></h3>
+<h3>4 - <a href="https://openintro.shinyapps.io/ims-05-infer-04/">Chi-squared goodness of fit test</a></h3>
 <p>The tutorial wraps up with two case studies using election data. Here, you’ll learn how to a second Chi-squared test to check the goodness of fit between your data and a hypothetical distribution. You’ll study election results from Iran and Iowa and evaluate whether we can detect fraud using something called Benford’s Law.</p>
 </div>
 <div id="bootstrapping-for-estimating-a-parameter" class="section level3">
-<h3>5 - <a href="https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-01/">Bootstrapping for estimating a parameter</a></h3>
+<h3>5 - <a href="https://openintro.shinyapps.io/ims-05-infer-05/">Bootstrapping for estimating a parameter</a></h3>
 <p>Construct confidence intervals for a median, mean, and any other statistic for the distribution of a numerical variable using bootstrapping.</p>
 </div>
 <div id="introducing-the-t-distribution" class="section level3">
-<h3>6 - <a href="https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-02/">Introducing the t-distribution</a></h3>
+<h3>6 - <a href="https://openintro.shinyapps.io/ims-05-infer-06/">Introducing the t-distribution</a></h3>
 <p>Introduce the t-distribution for theoretical inference on means and constrast it to the normal distribution.</p>
 </div>
 <div id="inference-for-difference-in-two-means" class="section level3">
-<h3>7 - <a href="https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-03/">Inference for difference in two means</a></h3>
+<h3>7 - <a href="https://openintro.shinyapps.io/ims-05-infer-07/">Inference for difference in two means</a></h3>
 <p>Use simulation based and theoretical methods for inference in the difference of two means.</p>
 </div>
 <div id="comparing-many-means" class="section level3">
-<h3>8 - <a href="https://openintro.shinyapps.io/ims-07-inference-for-numerical-responses-04/">Comparing many means</a></h3>
+<h3>8 - <a href="https://openintro.shinyapps.io/ims-05-infer-08/">Comparing many means</a></h3>
 <p>Compare many means using ANOVA.</p>
 </div>
 </div>
