--- a/02-explore/index.html
+++ b/02-explore/index.html
@@ -189,10 +189,10 @@ pre code {
 <h3>1 - <a href="https://openintro.shinyapps.io/ims-02-explore-01/">Visualizing categorical data</a></h3>
 <p>Creating graphical and numerical summaries of two categorical variables, primarily using two R packages: ggplot2 and dplyr.</p>
 <ul>
-<li>Graphical representation two categorical variables
+<li>Graphical representation of two categorical variables
 <ul>
 <li>Side-by-side bar charts</li>
-<li>Stacked bar chars</li>
+<li>Stacked bar charts</li>
 <li>To normalize or not to normalize</li>
 </ul></li>
 <li>Tabular representation of two categorical variables
@@ -221,7 +221,7 @@ pre code {
 <li>Side-by-side boxplots</li>
 <li>Faceted histograms</li>
 <li>Colored density curves</li>
-<li>Graphical representation of one numerical var</li>
+<li>Graphical representation of one numerical variable</li>
 <li>Marginal vs conditioning</li>
 <li>Histogram</li>
 <li>binwidth</li>
